[#26] report 부분 수정
